# mocap4ros2_optitrack

./: .gitignore  README.md  dependency_repos.repos
.github/workflows/: main.yaml  rolling.yaml
mocap4r2_optitrack_driver/: CMakeLists.txt  package.xml
mocap4r2_optitrack_driver/config/: mocap4r2_optitrack_driver_params.yaml
mocap4r2_optitrack_driver/include/mocap4r2_optitrack_driver/: mocap4r2_optitrack_driver.hpp
mocap4r2_optitrack_driver/launch/: optitrack2.launch.py
mocap4r2_optitrack_driver/src/: mocap4r2_optitrack_driver_main.cpp
mocap4r2_optitrack_driver/src/mocap4r2_optitrack_driver/: mocap4r2_optitrack_driver.cpp
mocap_optitrack_driver/: CHANGELOG.rst  CMakeLists.txt  install_sdk.py  package.xml
mocap_optitrack_driver/NatNetSDK/: .gitignore
mocap_optitrack_driver/config/: mocap_optitrack_driver_params.yaml
mocap_optitrack_driver/include/mocap_optitrack_driver/: mocap_optitrack_driver.hpp
mocap_optitrack_driver/launch/: optitrack2.launch.py
mocap_optitrack_driver/src/: mocap_optitrack_driver_main.cpp
mocap_optitrack_driver/src/mocap_optitrack_driver/: mocap_optitrack_driver.cpp
optitrack2_driver/: CMakeLists.txt  install_sdk.py  package.xml
optitrack2_driver/NatNetSDK/samples/SampleClient/: ReadMe.txt  makefile
optitrack2_driver/cmake/: FindNATNETSDK_CPP.cmake
optitrack2_driver/config/: optitrack2_driver_params.yaml
optitrack2_driver/include/optitrack2_driver/: optitrack2_driver.hpp
optitrack2_driver/launch/: optitrack2.launch.py
optitrack2_driver/src/: optitrack2_driver.cpp  optitrack2_driver_main.cpp
optitrack2_driver/test/: test_optitrack2_driver.cpp
